Adding disc 2 slides.

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -93,6 +93,18 @@
                   </a>
                 </td>
               </tr>
+              <tr>
+                <td>2</td>
+                <td>Environment Diagrams & Recursion</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc2.pdf">
+                    slides
+                  </a>
+                  <!--<a class="btn btn-warning" href="/assets/files/quiz2.py">-->
+                    <!--quiz-->
+                  <!--</a>-->
+                </td>
+              </tr>
             </tbody>
           </table>
           <h3 class="table-title">Teaching Locations/Hours</h3>
