--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -85,11 +85,11 @@
                   <a class="btn btn-primary" href="/assets/files/disc1.pdf">
                     slides
                   </a>
-                  <a class="btn btn-success" href="/assets/files/hof.py">
-                    code
-                  </a>
                   <a class="btn btn-warning" href="/assets/files/quiz1.py">
                     quiz
+                  </a>
+                  <a class="btn btn-success" href="/assets/files/hof.py">
+                    code
                   </a>
                 </td>
               </tr>
@@ -100,9 +100,9 @@
                   <a class="btn btn-primary" href="/assets/files/disc2.pdf">
                     slides
                   </a>
-                  <!--<a class="btn btn-warning" href="/assets/files/quiz2.py">-->
-                    <!--quiz-->
-                  <!--</a>-->
+                  <a class="btn btn-warning" href="/assets/files/quiz2.py">
+                    quiz
+                  </a>
                 </td>
               </tr>
             </tbody>
