--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -80,7 +80,7 @@
               </tr>
               <tr>
                 <td>1</td>
-                <td>Control & Higher Order Functions</td>
+                <td>Control and Higher Order Functions</td>
                 <td>
                   <a class="btn btn-primary" href="/assets/files/disc1.pdf">
                     slides
@@ -95,7 +95,7 @@
               </tr>
               <tr>
                 <td>2</td>
-                <td>Environment Diagrams & Recursion</td>
+                <td>Environment Diagrams and Recursion</td>
                 <td>
                   <a class="btn btn-primary" href="/assets/files/disc2.pdf">
                     slides
@@ -105,6 +105,18 @@
                   </a>
                 </td>
               </tr>
+              <!--<tr>-->
+                <!--<td>3</td>-->
+                <!--<td>Data Abstraction and Sequences</td>-->
+                <!--<td>-->
+                  <!--<a class="btn btn-primary" href="/assets/files/disc3.pdf">-->
+                    <!--slides-->
+                  <!--</a>-->
+                  <!--<a class="btn btn-warning" href="/assets/files/quiz3.py">-->
+                    <!--quiz-->
+                  <!--</a>-->
+                <!--</td>-->
+              <!--</tr>-->
             </tbody>
           </table>
           <h3 class="table-title">Teaching Locations/Hours</h3>
