Fixed a few typos on the home page.

--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
             In addition to coding and hacking together various projects,
             I'm also passionate about tutoring and mentoring other students in
             computer science.
-            This Spring, I'm a undergraduate student instructor for
+            This Spring, I'm an undergraduate student instructor for
             <a href="http://cs61a.org"> CS61A </a>. I'm also the 61A
-            course co-coordinator in the
-            <a href="http://csmberkeley.github.io"> Computer Science Mentors </a>
+            course co-coordinator for the
+            <a href="http://csmentors.berkeley.edu"> Computer Science Mentors </a>
             group on campus.
           </h3>
         </div>
