No more hackerino.

--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
             the University of California, Berkeley.
           </h3>
           <h3>
-            In addition to coding and hacking together various projects,
-            I'm also passionate about tutoring and mentoring other students in
+            I'm passionate about tutoring and mentoring other students in
             computer science.
             This Spring, I'm an undergraduate student instructor for
             <a href="http://cs61a.org"> CS61A </a>. I'm also the 61A
