Adding discussion 3 slides.

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -110,18 +110,18 @@
                   </a>
                 </td>
               </tr>
-              <!--<tr>-->
-                <!--<td>3</td>-->
-                <!--<td>Data Abstraction and Sequences</td>-->
-                <!--<td>-->
-                  <!--<a class="btn btn-primary" href="/assets/files/disc3.pdf">-->
-                    <!--slides-->
-                  <!--</a>-->
+              <tr>
+                <td>3</td>
+                <td>Data Abstraction and Sequences</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc3.pdf">
+                    slides
+                  </a>
                   <!--<a class="btn btn-warning" href="/assets/files/quiz3.py">-->
                     <!--quiz-->
                   <!--</a>-->
-                <!--</td>-->
-              <!--</tr>-->
+                </td>
+              </tr>
             </tbody>
           </table>
           <h3 class="table-title">Teaching Locations/Hours</h3>
