Remove lab review link, prep for midterm review.

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -60,9 +60,9 @@
             <a class="btn btn-primary" href="http://tinyurl.com/jerrydisc">
               <h4>Discussion Check-in</h4>
             </a>
-            <a class="btn btn-warning" href="http://tinyurl.com/jerrymt1labreview">
-              <h4>In-lab Review Survey</h4>
-            </a>
+            <!--<a class="btn btn-warning" href="http://tinyurl.com/jerrymt1labreview">-->
+              <!--<h4>Feedback</h4>-->
+            <!--</a>-->
           </div>
           <h3 class="table-title"> Discussion Resources</h3>
           <table class="table table-sm">
@@ -120,6 +120,15 @@
                   <a class="btn btn-warning" href="/assets/files/quiz3.py">
                     quiz
                   </a>
+                </td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>Midterm Review</td>
+                <td>
+                  <!--<a class="btn btn-primary" href="/assets/files/disc4.pdf">-->
+                    <!--slides-->
+                  <!--</a>-->
                 </td>
               </tr>
             </tbody>
