Adding disc4 slides.

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -126,9 +126,9 @@
                 <td>4</td>
                 <td>Midterm Review</td>
                 <td>
-                  <!--<a class="btn btn-primary" href="/assets/files/disc4.pdf">-->
-                    <!--slides-->
-                  <!--</a>-->
+                  <a class="btn btn-primary" href="/assets/files/disc4.pdf">
+                    slides
+                  </a>
                 </td>
               </tr>
             </tbody>
