--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -60,9 +60,9 @@
             <a class="btn btn-primary" href="http://tinyurl.com/jerrydisc">
               <h4>Discussion Check-in</h4>
             </a>
-            <!--<a class="btn btn-warning" href="http://tinyurl.com/jerrymt1labreview">-->
-              <!--<h4>Feedback</h4>-->
-            <!--</a>-->
+            <a class="btn btn-warning" href="https://tinyurl.com/jc-lab-fb">
+              <h4>Lab Feedback</h4>
+            </a>
           </div>
           <h3 class="table-title"> Discussion Resources</h3>
           <table class="table table-sm">
