--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -60,6 +60,9 @@
             <a class="btn btn-primary" href="http://tinyurl.com/jerrydisc">
               <h4>Discussion Check-in</h4>
             </a>
+            <a class="btn btn-warning" href="https://tinyurl.com/jc-disc-fb">
+              <h4>Discussion Feedback</h4>
+            </a>
             <a class="btn btn-warning" href="https://tinyurl.com/jc-lab-fb">
               <h4>Lab Feedback</h4>
             </a>
