Changed button to green.

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -60,7 +60,7 @@
             <a class="btn btn-primary" href="http://tinyurl.com/jerrydisc">
               <h4>Discussion Check-in</h4>
             </a>
-            <a class="btn btn-warning" href="https://tinyurl.com/jc-disc-fb">
+            <a class="btn btn-success" href="https://tinyurl.com/jc-disc-fb">
               <h4>Discussion Feedback</h4>
             </a>
             <a class="btn btn-warning" href="https://tinyurl.com/jc-lab-fb">
