Added week 5 stuff.

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -134,6 +134,18 @@
                   </a>
                 </td>
               </tr>
+              <tr>
+                <td>5</td>
+                <td>Trees and Mutation</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc5.pdf">
+                    slides
+                  </a>
+                  <a class="btn btn-warning" href="/assets/files/quiz5.py">
+                    quiz
+                  </a>
+                </td>
+              </tr>
             </tbody>
           </table>
           <h3 class="table-title">Teaching Locations/Hours</h3>
