Add disc6 slides.

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -79,7 +79,7 @@
             <tbody>
               <tr>
                 <td>0</td>
-                <td>Intro & Lost on the Moon</td>
+                <td>Intro and Lost on the Moon</td>
                 <td>
                   <a class="btn btn-primary" href="/assets/files/disc0.pdf">
                     slides
@@ -144,6 +144,18 @@
                   <a class="btn btn-warning" href="/assets/files/quiz5.py">
                     quiz
                   </a>
+                </td>
+              </tr>
+              <tr>
+                <td>6</td>
+                <td>Inheritance and Nonlocal</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc6.pdf">
+                    slides
+                  </a>
+                  <!--<a class="btn btn-warning" href="/assets/files/quiz6.py">-->
+                    <!--quiz-->
+                  <!--</a>-->
                 </td>
               </tr>
             </tbody>
