--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -153,9 +153,9 @@
                   <a class="btn btn-primary" href="/assets/files/disc6.pdf">
                     slides
                   </a>
-                  <!--<a class="btn btn-warning" href="/assets/files/quiz6.py">-->
-                    <!--quiz-->
-                  <!--</a>-->
+                  <a class="btn btn-warning" href="/assets/files/quiz6.py">
+                    quiz
+                  </a>
                 </td>
               </tr>
             </tbody>
