Add disc7 slides

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -158,6 +158,15 @@
                   </a>
                 </td>
               </tr>
+              <tr>
+                <td>7</td>
+                <td>Orders of Growth and Trees</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc7.pdf">
+                    slides
+                  </a>
+                </td>
+              </tr>
             </tbody>
           </table>
           <h3 class="table-title">Teaching Locations/Hours</h3>
