--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -167,6 +167,18 @@
                   </a>
                 </td>
               </tr>
+              <tr>
+                <td>8</td>
+                <td>Scheme</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc8.pdf">
+                    slides
+                  </a>
+                  <a class="btn btn-warning" href="/assets/files/quiz8.scm">
+                    quiz
+                  </a>
+                </td>
+              </tr>
             </tbody>
           </table>
           <h3 class="table-title">Teaching Locations/Hours</h3>
