--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -179,6 +179,18 @@
                   </a>
                 </td>
               </tr>
+              <tr>
+                <td>9</td>
+                <td>Tail Calls and Interpreters</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc9.pdf">
+                    slides
+                  </a>
+                  <a class="btn btn-warning" href="/assets/files/quiz9.scm">
+                    quiz
+                  </a>
+                </td>
+              </tr>
             </tbody>
           </table>
           <h3 class="table-title">Teaching Locations/Hours</h3>
