--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -191,6 +191,21 @@
                   </a>
                 </td>
               </tr>
+              <tr>
+                <td>10</td>
+                <td>Iterators and Streams</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc10.pdf">
+                    slides
+                  </a>
+                  <a class="btn btn-warning" href="/assets/files/quiz10.py">
+                    quiz
+                  </a>
+                  <a class="btn btn-success" href="/assets/files/disc10.zip">
+                    code
+                  </a>
+                </td>
+              </tr>
             </tbody>
           </table>
           <h3 class="table-title">Teaching Locations/Hours</h3>
