--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -206,6 +206,18 @@
                   </a>
                 </td>
               </tr>
+              <tr>
+                <td>11</td>
+                <td>SQL</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc11.pdf">
+                    slides
+                  </a>
+                  <a class="btn btn-success" href="/assets/files/week11demo.sql">
+                    code
+                  </a>
+                </td>
+              </tr>
             </tbody>
           </table>
           <h3 class="table-title">Teaching Locations/Hours</h3>
