--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -218,6 +218,15 @@
                   </a>
                 </td>
               </tr>
+              <tr>
+                <td>12</td>
+                <td>The End</td>
+                <td>
+                  <a class="btn btn-primary" href="/assets/files/disc12.pdf">
+                    slides
+                  </a>
+                </td>
+              </tr>
             </tbody>
           </table>
           <h3 class="table-title">Teaching Locations/Hours</h3>
