--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -56,15 +56,9 @@
           <div class="jumbotron">
             <h2>TA: Jerry Chen <a
                 href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a></h2>
-            <h3>Remember to check-in by Sunday at midnight.<h3>
-            <a class="btn btn-primary" href="http://tinyurl.com/jerrydisc">
-              <h4>Discussion Check-in</h4>
-            </a>
-            <a class="btn btn-success" href="https://tinyurl.com/jc-disc-fb">
-              <h4>Discussion Feedback</h4>
-            </a>
-            <a class="btn btn-warning" href="https://tinyurl.com/jc-lab-fb">
-              <h4>Lab Feedback</h4>
+            <h3>Thanks for a wonderful semester! Good luck on the final.</h3>
+            <a class="btn btn-primary" href="/assets/files/iter_gen.pdf">
+              <h4>Iterators and Generators Review Slides</h4>
             </a>
           </div>
           <h3 class="table-title"> Discussion Resources</h3>
