--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -54,8 +54,8 @@
         <div id="ta-section">
           <h1>CS 61A Spring 2016</h1>
           <div class="jumbotron">
-            <h2>TA: Jerry Chen <a
-                href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a></h2>
+            <h2>TA: Jerry Chen
+              <a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a></h2>
             <h3>Thanks for a wonderful semester! Good luck on the final.</h3>
             <a class="btn btn-primary" href="/assets/files/iter_gen.pdf">
               <h4>Iterators and Generators Review Slides</h4>
