--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -57,7 +57,7 @@
             <h2>TA: Jerry Chen
               <a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#106;&#101;&#114;&#114;&#121;&#46;&#99;&#64;&#98;&#101;&#114;&#107;&#101;&#108;&#101;&#121;&#46;&#101;&#100;&#117;'>[&#101;&#109;&#97;&#105;&#108;]</a></h2>
             <h3>Thanks for a wonderful semester! Good luck on the final.</h3>
-            <a class="btn btn-primary" href="/assets/files/iter_gen.pdf">
+            <a class="btn btn-primary" href="https://docs.google.com/a/berkeley.edu/presentation/d/1SuV5oFgcS19fIHR3WAwIzARAfwXG9tKHP_w_LPu0SCQ/edit?usp=sharing">
               <h4>Iterators and Generators Review Slides</h4>
             </a>
           </div>
