--- a/cs61a/sp16/index.html
+++ b/cs61a/sp16/index.html
@@ -40,7 +40,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a class="page-scroll" href="/cs61a/">For CS 61A Students</a></li>
+            <li><a class="page-scroll" href="/cs61a/sp16">For CS 61A Students</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
           </ul>
@@ -75,7 +75,7 @@
                 <td>0</td>
                 <td>Intro and Lost on the Moon</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc0.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc0.pdf">
                     slides
                   </a>
                 </td>
@@ -84,13 +84,13 @@
                 <td>1</td>
                 <td>Control and Higher Order Functions</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc1.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc1.pdf">
                     slides
                   </a>
-                  <a class="btn btn-warning" href="/assets/files/quiz1.py">
+                  <a class="btn btn-warning" href="/assets/files/cs61a/sp16/quiz1.py">
                     quiz
                   </a>
-                  <a class="btn btn-success" href="/assets/files/hof.py">
+                  <a class="btn btn-success" href="/assets/files/cs61a/sp16/hof.py">
                     code
                   </a>
                 </td>
@@ -99,10 +99,10 @@
                 <td>2</td>
                 <td>Environment Diagrams and Recursion</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc2.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc2.pdf">
                     slides
                   </a>
-                  <a class="btn btn-warning" href="/assets/files/quiz2.py">
+                  <a class="btn btn-warning" href="/assets/files/cs61a/sp16/quiz2.py">
                     quiz
                   </a>
                 </td>
@@ -111,10 +111,10 @@
                 <td>3</td>
                 <td>Data Abstraction and Sequences</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc3.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc3.pdf">
                     slides
                   </a>
-                  <a class="btn btn-warning" href="/assets/files/quiz3.py">
+                  <a class="btn btn-warning" href="/assets/files/cs61a/sp16/quiz3.py">
                     quiz
                   </a>
                 </td>
@@ -123,7 +123,7 @@
                 <td>4</td>
                 <td>Midterm Review</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc4.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc4.pdf">
                     slides
                   </a>
                 </td>
@@ -132,10 +132,10 @@
                 <td>5</td>
                 <td>Trees and Mutation</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc5.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc5.pdf">
                     slides
                   </a>
-                  <a class="btn btn-warning" href="/assets/files/quiz5.py">
+                  <a class="btn btn-warning" href="/assets/files/cs61a/sp16/quiz5.py">
                     quiz
                   </a>
                 </td>
@@ -144,10 +144,10 @@
                 <td>6</td>
                 <td>Inheritance and Nonlocal</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc6.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc6.pdf">
                     slides
                   </a>
-                  <a class="btn btn-warning" href="/assets/files/quiz6.py">
+                  <a class="btn btn-warning" href="/assets/files/cs61a/sp16/quiz6.py">
                     quiz
                   </a>
                 </td>
@@ -156,7 +156,7 @@
                 <td>7</td>
                 <td>Orders of Growth and Trees</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc7.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc7.pdf">
                     slides
                   </a>
                 </td>
@@ -165,10 +165,10 @@
                 <td>8</td>
                 <td>Scheme</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc8.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc8.pdf">
                     slides
                   </a>
-                  <a class="btn btn-warning" href="/assets/files/quiz8.scm">
+                  <a class="btn btn-warning" href="/assets/files/cs61a/sp16/quiz8.scm">
                     quiz
                   </a>
                 </td>
@@ -177,10 +177,10 @@
                 <td>9</td>
                 <td>Tail Calls and Interpreters</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc9.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc9.pdf">
                     slides
                   </a>
-                  <a class="btn btn-warning" href="/assets/files/quiz9.scm">
+                  <a class="btn btn-warning" href="/assets/files/cs61a/sp16/quiz9.scm">
                     quiz
                   </a>
                 </td>
@@ -189,13 +189,13 @@
                 <td>10</td>
                 <td>Iterators and Streams</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc10.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc10.pdf">
                     slides
                   </a>
-                  <a class="btn btn-warning" href="/assets/files/quiz10.py">
+                  <a class="btn btn-warning" href="/assets/files/cs61a/sp16/quiz10.py">
                     quiz
                   </a>
-                  <a class="btn btn-success" href="/assets/files/disc10.zip">
+                  <a class="btn btn-success" href="/assets/files/cs61a/sp16/disc10.zip">
                     code
                   </a>
                 </td>
@@ -204,10 +204,10 @@
                 <td>11</td>
                 <td>SQL</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc11.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc11.pdf">
                     slides
                   </a>
-                  <a class="btn btn-success" href="/assets/files/week11demo.sql">
+                  <a class="btn btn-success" href="/assets/files/cs61a/sp16/week11demo.sql">
                     code
                   </a>
                 </td>
@@ -216,7 +216,7 @@
                 <td>12</td>
                 <td>The End</td>
                 <td>
-                  <a class="btn btn-primary" href="/assets/files/disc12.pdf">
+                  <a class="btn btn-primary" href="/assets/files/cs61a/sp16/disc12.pdf">
                     slides
                   </a>
                 </td>
