--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <li><a class="page-scroll" href="#about">About</a></li>
             <li><a class="page-scroll" href="#experience">Experience</a></li>
             <li><a class="page-scroll" href="#contact">Contact</a></li>
-            <li><a class="page-scroll" href="/cs61a/">For CS 61A Students</a></li>
+            <li><a class="page-scroll" href="/cs61a/sp16">For CS 61A Students</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <li class="dropdown">
