Fix legacy cs61a site

--- a/cs61a/sp16/index.html
+++ b/cs61a/sp16/index.html
@@ -14,9 +14,8 @@ category: cs61a
 
     <title>CS 61A</title>
 
-    <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-    <link href="/bower_components/bootstrap-sass/assets/stylesheets/bootstrap.css"/>
-    <link href="./css/style.css" rel="stylesheet">
+    <link href="/css/legacy.css" rel="stylesheet"/>
+    <link href="./css/style.css" rel="stylesheet"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
