--- a/about.html
+++ b/about.html
@@ -1,10 +1,9 @@
 ---
-layout: default
+layout: landing
 title: About
 permalink: /
 category: personal
 ---
-
 <p>Hi there! I'm an undergraduate studying electrical
 engineering and computer science at the University of California, Berkeley.</p>
 
