--- a/cs61a/sp16/index.html
+++ b/cs61a/sp16/index.html
@@ -39,7 +39,7 @@ category: cs61a
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a class="page-scroll" href="/cs61a/">For CS 61A Students</a></li>
+            <li><a class="page-scroll" href="{{ page.url }}">For CS 61A Students</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
           </ul>
@@ -270,8 +270,8 @@ category: cs61a
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-    <script src="/bower_components/jquery/src/jquery.js"/>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"/>
+    <script src="/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
 
     <!-- Googly Analytics -->
     <script>
