--- a/experience.html
+++ b/experience.html
@@ -4,13 +4,76 @@ title: Experience
 permalink: /experience/
 category: personal
 ---
-<h2>Work</h2>
-<h2>Projects</h2>
-<div class="well">
-  <div class="inner">
-    <div class="proj-header"></div>
-    <div class="proj-description"></div>
-    <div class="proj-footer"></div>
+<a href="{{ site.resume }}" class="btn btn-raised"><i class="fa fa-file-text fa-lg"></i> Resume</a>
+<div id="work">
+  <h2>Work</h2> 
+  <div class="row">
+    {% for w in site.data.work %}
+    <div class="showcase-item col-lg-4">
+      <div class="well">
+        <div class="showcase-inner">
+          <div class="showcase-image" style="background-image: url({{ w.image }})">
+          </div>
+          <div class="showcase-header">
+            <h3>{{ w.name }}</h3>
+          </div>
+          <div class="showcase-tags">
+            {% for tag in w.tags %}
+            <span class="label">{{ tag }}</span>
+            {% endfor %}
+          </div>
+          <div class="showcase-description">
+            {% for paragraph in w.description %}
+            <h4>{{ paragraph }}</h4>
+            {% endfor %}
+          </div>
+        </div>
+        <div class="showcase-footer">
+        {% for link in w.links %}
+          <a href="{{ link.url }}" class="btn btn-raised {{ link.button-type }}">
+            <i class="fa {{ link.icon }} fa-lg fa-fw" aria-hidden="true"></i> {{ link.text }}
+          </a>
+        {% endfor %}
+        </div>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+</div>
+
+<div id="projects">
+  <h2>Projects</h2>
+  <div class="row">
+    {% for p in site.data.projects %}
+    <div class="showcase-item col-lg-4">
+      <div class="well">
+        <div class="showcase-inner">
+          <div class="showcase-image" style="background-image: url({{ p.image }})">
+          </div>
+          <div class="showcase-header">
+            <h3>{{ p.name }}</h3>
+          </div>
+          <div class="showcase-tags">
+            {% for tag in p.tags %}
+            <span class="label">{{ tag }}</span>
+            {% endfor %}
+          </div>
+          <div class="showcase-description">
+            {% for paragraph in p.description %}
+            <h4>{{ paragraph }}</h4>
+            {% endfor %}
+          </div>
+        </div>
+        <div class="showcase-footer">
+        {% for link in p.links %}
+          <a href="{{ link.url }}" class="btn btn-raised {{ link.button-type }}">
+            <i class = "fa {{ link.icon }} fa-lg fa-fw" aria-hidden="true"></i> {{ link.text }}
+          </a>
+        {% endfor %}
+        </div>
+      </div>
+    </div>
+    {% endfor %}
   </div>
 </div>
 
