Final touches, prep for publishing

--- a/experience.html
+++ b/experience.html
@@ -5,6 +5,7 @@ permalink: /experience/
 category: personal
 ---
 <a href="{{ site.resume }}" class="btn btn-raised"><i class="fa fa-file-text fa-lg"></i> Resume</a>
+<a href="mailto:{{ site.email }}" class="btn btn-raised"><i class="fa fa-envelope fa-lg"></i> Email Me</a>
 <div id="work">
   <h2>Work</h2> 
   <div class="row">
