Disclaimer for setup :P

--- a/cs61a/setup/index.html
+++ b/cs61a/setup/index.html
@@ -5,7 +5,9 @@ permalink: cs61a/setup/
 category: cs61a
 tag: current
 ---
-<p>Here are details about the tools that I currently use or have used.</p>
+<p>Here are details about the tools that I currently use or have used. This
+isn't an official list by any means -- just the tools that I believe are worth
+the trouble to set up.</p>
 
 <div class="alert alert-danger">
   <p>
