--- a/cs61a/setup/index.html
+++ b/cs61a/setup/index.html
@@ -5,18 +5,16 @@ permalink: cs61a/setup/
 category: cs61a
 tag: current
 ---
-<p>Here are details about the tools that I currently use or have used. This
-isn't an official list by any means -- just the tools that I believe are worth
-the trouble to set up.</p>
+<p>
+This is a short list of tools that I think are worth the trouble to set up.
+</p>
 
-<div class="alert alert-danger">
-  <p>
-    <b>Wait!</b> Before downloading anything, consider getting a
-    <u><a href="#packagemanager">package manager</a></u>
-    for your operating system first. If you're on Linux, then you should already
-    have one.
-  </p>
-</div>
+<p>
+Before downloading anything, I'd recommend getting a
+<u><a href="#packagemanager">package manager</a></u>
+for your operating system first. If you're on Linux, then you should already
+have one.
+</p>
 
 <!-- Editors -->
 {% for e in site.data.cs61a.setup.editors %}
