--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -157,6 +157,11 @@
         <td style="text-align: left">Object Oriented Programming</td>
         <td style="text-align: left"><a href="sp18/assets/disc05.pdf" class="btn btn-raised btn-default">Slides</a></td>
       </tr>
+      <tr>
+        <td style="text-align: left">6</td>
+        <td style="text-align: left">Orders of Growth &amp; Linked Lists</td>
+        <td style="text-align: left"><a href="sp18/assets/disc06.pdf" class="btn btn-raised btn-default">Slides</a></td>
+      </tr>
     </tbody>
   </table>
 
