Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -162,6 +162,11 @@
         <td style="text-align: left">Orders of Growth &amp; Linked Lists</td>
         <td style="text-align: left"><a href="sp18/assets/disc06.pdf" class="btn btn-raised btn-default">Slides</a></td>
       </tr>
+      <tr>
+        <td style="text-align: left">7</td>
+        <td style="text-align: left">Scheme</td>
+        <td style="text-align: left"><a href="sp18/assets/disc07.pdf" class="btn btn-raised btn-default">Slides</a></td>
+      </tr>
     </tbody>
   </table>
 
