Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/cs61a/sp16/index.html
+++ b/cs61a/sp16/index.html
@@ -10,7 +10,7 @@
 
     <title>CS 61A</title>
 
-    <link href="/css/legacy.css" rel="stylesheet"/>
+    <!--<link href="/css/legacy.css" rel="stylesheet"/>-->
     <link href="./css/style.css" rel="stylesheet"/>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -266,8 +266,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-    <script src="/bower_components/jquery/dist/jquery.js"></script>
-    <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
+    <!--<script src="/bower_components/jquery/dist/jquery.js"></script>-->
+    <!--<script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>-->
 
   </body>
 </html>
