--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -167,6 +167,11 @@
         <td style="text-align: left">Scheme</td>
         <td style="text-align: left"><a href="sp18/assets/disc07.pdf" class="btn btn-raised btn-default">Slides</a></td>
       </tr>
+      <tr>
+        <td style="text-align: left">8</td>
+        <td style="text-align: left">Interpreters and Tail Calls</td>
+        <td style="text-align: left"><a href="sp18/assets/disc08.pdf" class="btn btn-raised btn-default">Slides</a></td>
+      </tr>
     </tbody>
   </table>
 
