--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -169,8 +169,13 @@
       </tr>
       <tr>
         <td style="text-align: left">8</td>
-        <td style="text-align: left">Interpreters and Tail Calls</td>
+        <td style="text-align: left">Interpreters &amp; Tail Calls</td>
         <td style="text-align: left"><a href="sp18/assets/disc08.pdf" class="btn btn-raised btn-default">Slides</a></td>
+      </tr>
+      <tr>
+        <td style="text-align: left">9</td>
+        <td style="text-align: left">Macros &amp; Streams</td>
+        <td style="text-align: left"><a href="sp18/assets/disc09.pdf" class="btn btn-raised btn-default">Slides</a></td>
       </tr>
     </tbody>
   </table>
