--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -177,6 +177,11 @@
         <td style="text-align: left">Macros &amp; Streams</td>
         <td style="text-align: left"><a href="sp18/assets/disc09.pdf" class="btn btn-raised btn-default">Slides</a></td>
       </tr>
+      <tr>
+        <td style="text-align: left">10</td>
+        <td style="text-align: left">SQL</td>
+        <td style="text-align: left"><a href="sp18/assets/disc10.pdf" class="btn btn-raised btn-default">Slides</a></td>
+      </tr>
     </tbody>
   </table>
 
