--- a/cs184/milestone/index.html
+++ b/cs184/milestone/index.html
@@ -82,12 +82,13 @@ point, and then add in movement controls later. It turns out that movement
 of the camera is relatively straightforward, but cloud rendering using
 WebGL requires a bit more planning.</p>
 
-<p>Our initial idea was to use a light scattering model to render clouds; in
-the current checkpoint, we have demonstrated that creating such particles
-is feasible, and it interacts well with the movement controls we have so
-far. However, it will take some additional time to figure out how to we
-can apply the light scattering model since the WebGL library we are using
-doesn’t seem to easily allow for it.</p>
+<p>Our initial idea was to use a <a href="https://software.intel.com/en-us/articles/dynamic-volumetric-cloud-rendering-for-games-on-multi-core-platforms/">light scattering
+model</a>
+to render clouds; in the current checkpoint, we have demonstrated that
+creating such particles is feasible, and it interacts well with the
+movement controls we have so far. However, it will take some additional
+time to figure out how to we can apply the light scattering model since
+the WebGL library we are using doesn’t seem to easily allow for it.</p>
 
 <p>Another possibility is to try an alternate rendering approach that will be
 more friendly to our current setup. For example, projecting textures onto
