Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/cs184/milestone/index.html
+++ b/cs184/milestone/index.html
@@ -106,7 +106,9 @@ layer is realistic, which could perhaps be simulated as fog.</p>
 <h2 id="downloads">Downloads</h2>
 <ul>
   <li><a href="/cs184/milestone/milestone.pdf">Milestone slides</a></li>
+  <li>Milestone video</li>
 </ul>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FIiS-2NfEUs" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen=""></iframe>
 
       </div>
     </main>
