Deploy jerryjrchen/jerryjrchen.github.io to github.com/jerryjrchen/jerryjrchen.github.io.git:master

--- a/cs61a/index.html
+++ b/cs61a/index.html
@@ -98,6 +98,9 @@
 
     <ul>
       <li>
+        <p>Thanks for a great semester! Good luck on your finals 🙂</p>
+      </li>
+      <li>
         <p>Welcome to CS 61A! <a href="https://v.gd/disc00">Check in for discussion 0 here</a>.</p>
       </li>
       <li>
